0.0.5
├─• Se terminar pruebas unitarias de api incidentes
├─• Se añaden historialUsuario y ciudadano a api perfiles, con sus repositorios, service y controlladores
├─• Se implementan test de compania, ciudadano, historialUsuario
├─• Se corrigen problemas de fechas
└─• Se prueba dataloader que se ejecute correctamente

->>> Añadir historial para incidentes
->>> Eliminar historial y categorias para registros